--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "PhotoGallary",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://ShubhamTiwari909.github.io/PhotoGallary",
@@ -22,7 +22,7 @@
     "react-icons": "^4.3.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "react-speech-kit": "^3.0.1",
     "react-spring": "^9.3.3",
     "reactstrap": "^9.0.1",
