--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "PhotoGallary",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ShubhamTiwari909.github.io/PhotoGallary",
+  "homepage": "http://ShubhamTiwari909.github.io/PhotoGallary",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
