--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "PhotoGallary",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ShubhamTiwari909.github.io/PhotoGallary",
+  "homepage": "https://ShubhamTiwari909.github.io/PhotoGallary",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
