--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "bootstrap": "^5.1.3",
     "crypto": "^1.0.1",
     "express": "^4.17.2",
+    "firebase": "^8.3.1",
+    "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
     "http-proxy-middleware": "^2.0.2",
+    "mongoose": "^6.2.1",
     "mysql2": "^2.3.3",
     "nanoid": "^3.1.31",
     "node-fetch": "^3.2.0",
@@ -25,6 +28,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
@@ -38,7 +42,8 @@
     "unsplash-js": "^7.0.15",
     "util": "^0.12.4",
     "vite": "^2.7.10",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
