--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "styled-components": "^5.3.3",
     "unsplash-js": "^7.0.15",
     "util": "^0.12.4",
+    "uuid": "^8.3.2",
     "vite": "^2.7.10",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
