fixed the links creating bugs

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "caniuse-lite": "^1.0.30001335",
     "crypto": "^1.0.1",
     "express": "^4.17.2",
     "firebase": "^8.3.1",
@@ -31,7 +32,7 @@
     "react-modal": "^3.14.4",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-speech-kit": "^3.0.1",
     "react-spring": "^9.3.3",
     "reactstrap": "^9.0.1",
